welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var color
  avance()
  if (get couleurSol()==Color.green){
    return true
  }
    // Write your code here
}